feat: create account usecases

--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
+    "modulePaths": [
+      "<rootDir>"
+  ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -64,7 +67,11 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "testPathIgnorePatterns": [
+      "node_modules/"
+  ],
     "coverageDirectory": "../coverage",
+    "coverageProvider": "babel",
     "testEnvironment": "node"
   }
 }
